# ComputerGraphicsCSC

./: README.md
Task1/: CMakeLists.txt  README.md  build.sh  imgui_lib.ini  main.cpp
Task1/include/: Fractal.h
Task1/include/shaders/: FractalFragment.h  FractalVertex.h
Task1/include/textures/: texure.h
Task1/shaders/: FractalFragment.glsl  FractalVertex.glsl
Task1/src/: Fractal.cpp  Shader.cpp
Task2/: CMakeLists.txt  README.md  build.sh  main.cpp
Task2/include/: Camera.h  Mesh.h  ObjParser.h  ObjectRenderer.h  Shader.h
Task2/include/objects/: cube.h
Task2/include/shaders/: ObjectRenderFragment.h  ObjectRenderVertex.h
Task2/shaders/: ObjectRenderFragment.glsl  ObjectRenderVertex.glsl
Task2/src/: Camera.cpp  Mesh.cpp  ObjectRenderer.cpp  Shader.cpp
Task3/: CMakeLists.txt  build.sh  install_dependencies.sh  main.cpp
Task3/include/: FreeCamera.h  ObjParser.h  ObjectRenderer.h  Particle.h  ParticlesEmmiter.h  TrackballCamera.h
Task3/include/objects/: cube.h
Task3/include/shaders/: ObjectRenderFragment.h  ObjectRenderVertex.h  ParticlesFragment.h  ParticlesVertex.h
Task3/shaders/: ObjectRenderFragment.glsl  ParticlesFragment.glsl  ParticlesVertex.glsl
Task3/src/: FreeCamera.cpp  ObjectRenderer.cpp  ParticlesEmmiter.cpp  Shader.cpp  TrackballCamera.cpp
